syntax = "proto3";

package order;
option go_package = "project/api/proto/orderpb";

import "order_models.proto";

message CreateOrderRequest {
    string user_id = 1;
    string restaurant_id = 2;
    repeated OrderItem items = 3;
}

message CreateOrderResponse {
    string order_id = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}
